<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1"
        android:textSize="@dimen/calc_font_size"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintBottom_toTopOf="@id/button_4" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/button_2"
        android:textSize="@dimen/calc_font_size"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:text="@string/button_3"
        android:textSize="@dimen/calc_font_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@id/button_divide" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/button_divide"
        android:textSize="@dimen/calc_font_size"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_4"
        android:textSize="@dimen/calc_font_size"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/button_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintBottom_toTopOf="@id/button_7" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_5"
        android:textSize="@dimen/calc_font_size"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintBottom_toTopOf="@id/button_8" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_6"
        android:textSize="@dimen/calc_font_size"
        app:layout_constraintTop_toBottomOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintBottom_toTopOf="@id/button_9" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_multiply"
        android:textSize="@dimen/calc_font_size"
        app:layout_constraintTop_toBottomOf="@id/button_divide"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_subtract" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_7"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textSize="@dimen/calc_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_8"
        android:textSize="@dimen/calc_font_size"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_9"
        android:textSize="@dimen/calc_font_size"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toBottomOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@id/button_subtract"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_subtract"
        android:textSize="@dimen/calc_font_size"
        app:layout_constraintTop_toBottomOf="@id/button_multiply"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:text="@string/button_0"
        android:textSize="@dimen/calc_font_size"
        app:layout_constraintStart_toStartOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@id/button_point"
         />

    <Button
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_point"
        android:textSize="@dimen/calc_font_size"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintTop_toBottomOf="@id/button_9"
        app:layout_constraintEnd_toEndOf="@id/button_9"
        />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_calculate"
        android:textSize="@dimen/calc_font_size"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintTop_toBottomOf="@id/button_subtract"
        app:layout_constraintEnd_toEndOf="@id/button_subtract"
        />


</androidx.constraintlayout.widget.ConstraintLayout>